backend: get author by id
